--- a/css/style.css
+++ b/css/style.css
@@ -2,44 +2,42 @@
 
 * {
   box-sizing: border-box;
+  outline: 0;
+  border: 0;
 }
 
 body {
   margin: 0;
   padding: 0;
   background-color: #212529;
+  color: #fff;
+  font-family: 'Poppins', 'sans-serif';
+  line-height: 1.6;
+  font-size: 14px;
+  text-align: center;
   display: grid;
   place-items: center;
   overflow: hidden;
   width: 100%;
   height: 100vh;
+  font-weight: 500;
 }
 
 .btn {
   background-color: #0a84ff;
-  font-family: 'Poppins', 'sans-serif';
   font-weight: bold;
-  font-size: 14px;
-  line-height: 1.6;
-  text-align: center;
   padding: 10px 50px;
-  outline: 0;
-  border: 0;
-  color: #fff;
   border-radius: 8px;
   cursor: pointer;
+  color: #fff;
 }
 
 #requests {
-  font-family: 'Poppins', 'sans-serif';
   position: absolute;
   top: 0;
   right: 0;
   margin: 1rem;
-  color: #fff;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 500;
+  text-align: right;
 }
 
 .warning {
@@ -49,6 +47,4 @@ body {
   margin: 1rem;
   top: 0;
   left: 0;
-  font-family: 'Poppins', 'sans-serif';
-  font-weight: 500;
 }
