--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@ body {
   margin: 0;
   padding: 0;
   background-color: #212529;
+  background: radial-gradient(
+    ellipse 100% 100% at 100% 100%,
+    #fb542b 0%,
+    #a91b78 46%,
+    #392dd1 100%
+  );
   color: #fff;
   font-family: 'Poppins', 'sans-serif';
   line-height: 1.6;
@@ -24,7 +30,7 @@ body {
 }
 
 .btn {
-  background-color: #0a84ff;
+  background-color: #fb542b;
   font-weight: bold;
   padding: 10px 50px;
   border-radius: 8px;
@@ -42,7 +48,7 @@ body {
 
 .warning {
   font-size: 12px;
-  color: red;
+  color: #fff;
   position: absolute;
   margin: 1rem;
   top: 0;
